<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="nMedia">NMedia!</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="menu" translatable="false">menu</string>
    <string name="number_like" translatable="false">0</string>
    <string name="number_see" translatable="false">5k</string>
    <string name="textNameForShare" translatable="false">telegram</string>
    <string name="description_post_author_avatar">description_post_author_avatar</string>
    <string name="description_post_menu">description_post_menu</string>
    <string name="description_post_like">description_post_like</string>
    <string name="description_post_share">description_post_share</string>
    <string name="description_post_save">description_post_save</string>
    <string name="menu_edit">menu_edit</string>
    <string name="menu_remove">menu_remove</string>
    <string name="post_text">post_text</string>
    <string name="error_empty_context">error_empty_context</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">cancel</string>
    <string name="edit_message">Edit Message</string>
    <string name="editMessage" translatable="false">Edit Message</string>
    <string name="enter_cross">enter cross</string>
    <string name="editPost" translatable="false">Add Post</string>
    <string name="default_number" translatable="false">10</string>
    <string name="chooser_share_post">chooser_share_post</string>
    <string name="add_post">add_post</string>
    <string name="icon_planet" translatable="false">icon_planet</string>
    <string name="iconPlay">icon_play</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s`s post</string>
    <string name="notification_user_published">User %1$s published %2$s`s post</string>

</resources>