<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editCL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/pencil"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginStart="@dimen/vertical_length"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/error_empty_context"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_blue" />

    <TextView
        android:id="@+id/textEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pencil"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/EditMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_length"
        android:text="@string/editMessage"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/pencil"
        app:layout_constraintEnd_toEndOf="@id/pencil"
        app:layout_constraintStart_toStartOf="@id/pencil" />

    <ImageView

        android:id="@+id/cancel_button"
        android:layout_width="@dimen/image_settings"
        android:layout_height="@dimen/image_settings"
        android:layout_marginEnd="@dimen/vertical_length"
        android:contentDescription="@string/enter_cross"
        android:src="@drawable/cross"
        app:layout_constraintBottom_toBottomOf="@+id/pencil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pencil"
        app:layout_constraintVertical_bias="0.583" />


</androidx.constraintlayout.widget.ConstraintLayout>