<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#FBFBFB"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/avatar"
        android:src="@drawable/post_avatar_drawable"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/changePostText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoLink="web"
        android:background="#FFFFFF"
        android:textColorLink="#2DD8BE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <!--    <TextView-->
    <!--        android:id="@+id/text_forLike"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/horizontal_length"-->
    <!--        android:text="@string/number_like"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/button_like"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/button_like"-->
    <!--        app:layout_constraintTop_toTopOf="@id/button_like"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_length"
        android:layout_marginTop="@dimen/vertical_length"
        android:checkable="true"
        android:contentDescription="@string/number_like"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:checkable="true"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_share_selector"
        app:layout_constraintBottom_toBottomOf="@+id/button_like"
        app:layout_constraintStart_toEndOf="@+id/button_like"
        app:layout_constraintTop_toTopOf="@+id/button_like" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/vertical_length"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_menu_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_see"
        android:layout_width="@dimen/image_settings"
        android:layout_height="@dimen/image_settings"
        android:layout_marginEnd="@dimen/horizontal_length"
        android:background="@android:color/transparent"
        android:contentDescription="@string/number_see"
        app:layout_constraintBottom_toBottomOf="@id/text_forSee"
        app:layout_constraintEnd_toStartOf="@id/text_forSee"
        app:layout_constraintTop_toBottomOf="@id/contentBottom"
        app:layout_constraintTop_toTopOf="@id/text_forSee"
        app:srcCompat="@drawable/ic_eye" />


    <TextView
        android:id="@+id/text_forSee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vertical_length"
        android:text="@string/default_number"
        app:layout_constraintBottom_toBottomOf="@+id/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_share" />

    <!--    <TextView-->
    <!--        android:id="@+id/text_forShare"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/horizontal_length"-->
    <!--        android:text="@string/textNameForShare"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/button_share"-->
    <!--        app:layout_constraintStart_toEndOf="@id/button_share"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/contentBottom"-->
    <!--        app:layout_constraintTop_toTopOf="@id/button_share" />-->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="changePostText2" />


</androidx.constraintlayout.widget.ConstraintLayout>